--- a/index.html
+++ b/index.html
@@ -8,7 +8,48 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
+  <!-- Include SweetAlert2 library from CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <body>
+    <!-- Shape Divider  BOTTOM-->
+    <div class="custom-shape-divider-bottom-1705748003">
+      <svg
+        data-name="Layer 1"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1200 120"
+        preserveAspectRatio="none"
+      >
+        <path
+          d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+          opacity=".25"
+          class="shape-fill"
+        ></path>
+        <path
+          d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+          opacity=".5"
+          class="shape-fill"
+        ></path>
+        <path
+          d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+          class="shape-fill"
+        ></path>
+      </svg>
+    </div>
+    <!-- Shape Divider  TOP-->
+    <div class="custom-shape-divider-top-1705747858">
+      <svg
+        data-name="Layer 1"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1200 120"
+        preserveAspectRatio="none"
+      >
+        <path
+          d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+          class="shape-fill"
+        ></path>
+      </svg>
+    </div>
     <img src="images/logo.png" class="logo" />
     <h1 class="text">
       Instantly generate a random <br />
@@ -16,15 +57,29 @@
     </h1>
 
     <main class="container-input">
-      <span>Password lenght: <span id="value"></span></span>
-      <input
-        id="slider"
-        class="slider"
-        type="range"
-        min="5"
-        max="25"
-        value="15"
-      />
+      <span
+        >Choose the number of characters for your password
+        <span id="value" class="value"></span
+      ></span>
+      <div class="inputs">
+        <input
+          id="rangeNumber"
+          class="rangeNumber"
+          type="number"
+          min="1"
+          max="50"
+          value="25"
+          onkeydown="return false"
+        />
+        <input
+          id="slider"
+          class="slider"
+          type="range"
+          min="1"
+          max="50"
+          value="25"
+        />
+      </div>
       <button id="button" class="button-cta" onclick="generatePassword()">
         Generate
       </button>
@@ -32,16 +87,31 @@
 
     <div
       id="container-password"
-      onclick="copyPassword()"
       class="container-password hide"
+      onclick="copyPassword()"
     >
-      <span>Your generated password:</span>
+      <span>Your generated password: <br /></span>
       <span id="password" class="password"></span>
       <span class="tooltip">Click to copy. 👆</span>
     </div>
 
-    <p class="credits">Made by Andre "Dimaz"</p>
+    <p class="credits">Developed by Andre "Dimaz"</p>
 
+    <button class="btn" id="btn" onclick="redirectToLink()">
+      <svg
+        width="40"
+        height="40"
+        fill="#0092E4"
+        xmlns="http://www.w3.org/2000/svg"
+        data-name="Layer 1"
+        viewBox="0 0 24 24"
+        id="github"
+      >
+        <path
+          d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z"
+        ></path>
+      </svg>
+    </button>
     <script src="script.js"></script>
   </body>
 </html>
